base/monitoring/tools-server/cadvisor-exporter/networkpolicies/prometheus-egress-tools-server-cadvisor-exporter.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-tools-server-cadvisor-exporter
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toCIDR:
        - 192.168.0.4/32
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
